tests/basic/bad/test10.pepa
% File: tests/bad/test10.pepa
% Unbounded growth (of P)
P = (a, r).(P <> P);
(P <> P)
